# SophonPatcher

./: .gitignore  Cargo.toml  README.md
patcher/: Cargo.toml
patcher/src/: extractor.rs  hpatchz.rs  main.rs  util.rs
patcher/src/action/: chunk.rs  hdiff.rs  ldiff.rs  mod.rs
patcher/src/serialize/: deletefiles.rs  hdifffiles.rs  hdiffmap.rs  mod.rs  pkg_version.rs
sophon/: Cargo.toml
sophon/src/: lib.rs
sophon/src/proto/: chunk.rs  mod.rs  sophon.rs
sophon/src/sophon/: chunk.rs  ldiff.rs  mod.rs
