[workspace.package]
description = "A tool to patch game client with multiple ways"

[workspace]
members = ["sophon", "patcher"]
resolver = "2"

[workspace.dependencies]
indexmap = { version = "2.7.0", features = ["serde"] }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "fs", "process"] }
prost = "0.13.4"
prost-types = "0.13.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
zstd = "0.13.2"
anyhow = "1.0.97"
futures = "0.3.31"
rs-leveldb = "0.1.5"
memmap2 = "0.9.5"
rayon = "1.10.0"
zip = "4.0.0"
regex = "1.11.1"
walkdir = "2.5.0"
rand = "0.8.5"
indicatif = "0.17"
sevenz-rust = "0.6.1"
thiserror = "2.0.7"
md5 = "0.7.0"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
