[package]
name = "SophonPatcher"
description = "A tool to patch game client with multiple ways"
edition = "2024"
version = "1.0.2"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
zip.workspace = true
indicatif.workspace = true
rand.workspace = true
rayon.workspace = true
futures.workspace = true
walkdir.workspace = true
sevenz-rust.workspace = true
thiserror.workspace = true
md5.workspace = true

sophon = { path = "../sophon" }