[package]
name = "sophon"
description = "A library to perform Sophon actions"
edition = "2024"
version = "1.1.1"

[dependencies]
tokio.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
zstd.workspace = true
anyhow.workspace = true
futures.workspace = true
rs-leveldb.workspace = true
memmap2.workspace = true
rayon.workspace = true
indicatif.workspace = true